--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -1,6 +1,6 @@
 <%= render :partial => "shared/form_messages", :locals => {:object => @accession, :form => form} %>
 
-
+<% Rails.logger.debug(form.obj.inspect << "<-- Form Object Start") %>
 <% define_template("accession", jsonmodel_definition(:accession)) do |form| %>
   <section id="basic_information">
     <h3>Basic Information</h3>
@@ -10,7 +10,6 @@
        <%= form.label_and_date "accession_date", {:field_opts => {:value => (@accession.accession_date.blank? ? "" : Date.strptime(@accession.accession_date, "%Y-%m-%d"))}} %>
        <%= form.label_and_textarea "content_description" %>
        <%= form.label_and_textarea "condition_description" %>
-       <%= render :partial => "subjects/linker", :locals => { :form => form }%>
        <%= render :partial => "resources/linker", :locals => { :form => form }%>
     </fieldset>
   </section>
@@ -18,9 +17,12 @@
 
 <% form.emit_template("accession") %>
 
-<%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "linked_agents", :template => "accession_linked_agent"} %>
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents"} %>
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates"} %>
+
+<%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "linked_agents", :template => "accession_linked_agent"} %>
+<%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "subjects", :template => "accession_subject"} %>
+
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "external_documents"} %>
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "rights_statements"} %>
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "deaccessions"} %>
