--- a/frontend/app/views/digital_objects/_form_container.html.erb
+++ b/frontend/app/views/digital_objects/_form_container.html.erb
@@ -16,13 +16,14 @@
       <%= form.label_and_select "digital_object_type", form.possible_options_for("digital_object_type") %>
       <%= form.label_and_select "language", form.possible_options_for("language", true) %>
       <%= form.label_and_boolean "restrictions", {}, form.default_for("restrictions") %>
-      <%= render :partial => "subjects/linker", :locals => { :form => form }%>
     </section>
   <% end %>
 
   <% form.emit_template("digital_object") %>
 
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "linked_agents", :template => "digital_object_linked_agent"} %>
+  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "subjects", :template => "subrecord_subject"} %>
+
 
   <%= render :partial => "notes/form", :locals => {:form => form, :all_note_types => note_types_for(form['jsonmodel_type'])} %>
 
