--- a/frontend/app/views/digital_objects/_show_inline.html.erb
+++ b/frontend/app/views/digital_objects/_show_inline.html.erb
@@ -21,16 +21,16 @@
         <%= readonly.label_and_select "language", readonly.possible_options_for("language") %>
         <%= readonly.label_and_boolean "restrictions" %>
 
-        <% if not @digital_object.subjects.blank? %>
-          <hr/>
-          <%= render :partial => "subjects/show", :locals => {:subjects => @digital_object["resolved"]["subjects"]} %>
-        <% end %>
       </section>
 
       <% if @digital_object.linked_agents.length > 0 %>
         <%= render :partial => "linked_agents/show", :locals => { :linked_agents => @digital_object.linked_agents, :section_id => "digital_object_linked_agents_" } %>
       <% end %>
-
+      
+      <% if not @digital_object.subjects.blank? %>
+        <hr/>
+        <%= render :partial => "subjects/show_inline", :locals => {:subjects => @digital_object["resolved"]["subjects"]} %>
+      <% end %>
 
       <% if @digital_object.notes.length > 0 %>
         <%= render :partial => "notes/show", :locals => { :notes => @digital_object.notes, :context => readonly } %>
