--- a/frontend/app/views/subjects/_linker.html.erb
+++ b/frontend/app/views/subjects/_linker.html.erb
@@ -10,7 +10,7 @@
   end
 
   data_path = form.path
-  data_name = "ref" # De-referenced by the backend if the schema def calls for an item array
+  data_name = "ref" # De-referenced by the controller if the schema def calls for an item array
 %>
 
 <hr/>
