--- a/frontend/app/views/users/index.html.erb
+++ b/frontend/app/views/users/index.html.erb
@@ -30,7 +30,7 @@
               <td><%= user.username %></td>
               <td>
                  <div class="btn-group" style="float: right">
-                   <%= link_to "Edit", {:controller => :users, :action => :edit, :username => user.username}, :class => "btn btn-mini" %>
+                   <%= link_to "Edit", {:controller => :users, :action => :edit, :id => user.id}, :class => "btn btn-mini" %>
                  </div>
               </td>
             </tr>
