--- a/frontend/app/views/subjects/_linker.html.erb
+++ b/frontend/app/views/subjects/_linker.html.erb
@@ -26,8 +26,8 @@
             data-name="<%= data_name %>"
             data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
             data-selected='<%= selected_json %>'
+            data-format_template_id="linker_subject_template"
             data-multiplicity="one"
-            data-format_property="display_string"
             data-sortable="true"
             data-types='["subject"]'
           />
