Fix selenium tests - sort_name and subject linker errors

--- a/frontend/app/views/subjects/_linker.html.erb
+++ b/frontend/app/views/subjects/_linker.html.erb
@@ -19,7 +19,7 @@
    <div class="controls">
        <div class="input-append linker-wrapper">
           <input type="text" class="linker"
-            id="<%= form.id_for("subjects") %>"
+            id="<%= form.id_for(data_name) %>"
             data-label="Subject"
             data-label_plural="Subjects"
             data-path="<%= data_path %>"
