--- a/frontend/app/views/digital_objects/_sidebar.html.erb
+++ b/frontend/app/views/digital_objects/_sidebar.html.erb
@@ -28,7 +28,7 @@
 
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
-        <button type="submit" class="btn btn-primary">Save Resource</button>
+        <button type="submit" class="btn btn-primary">Save Digital Object</button>
       </li>
     <% end %>
   </ul>
