--- a/frontend/app/views/accessions/index.html.erb
+++ b/frontend/app/views/accessions/index.html.erb
@@ -28,7 +28,7 @@
                 <% if accession.suppressed %><span class="label label-info">Suppressed</span><% end %>
                 <%= accession.title %>
                </td>
-               <td><%= accession.id %></td>
+               <td><%= accession.ref_id %></td>
                <td><%= Date.strptime(accession.accession_date, "%Y-%m-%d") %></td>
                <td>
                   <div class="btn-group" style="float: right">
