tweaked Date display logic a bit

--- a/frontend/app/views/dates/_show.html.erb
+++ b/frontend/app/views/dates/_show.html.erb
@@ -18,12 +18,12 @@
               <%= I18n.t("date.label_#{date['label']}") %>
             </div>
             <div class="span6">
-             <% if date['date_type'] === "expression" %>
-                <%= date['expression'] %>
-              <% elsif date['date_type'] === "single" %>
+              <% if date['date_type'] === "single" %>
                 <%= date['begin'] %> <%= date['begin_time'] %>
-              <% else %>
+              <% elsif date['date_type'] %>
                 <%= date['begin'] %> <%= date['begin_time'] %> &ndash; <%= date['end'] %> <%= date['end_time'] %>
+              <% else %>
+                <%= date['expression']%>
               <% end %>
             </div>
             <div class="span3">
