--- a/frontend/app/assets/stylesheets/archivesspace/tree.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tree.less
@@ -17,6 +17,7 @@
   border-top: 1px solid #EEE;
   border-bottom: 1px solid #FFF;
   overflow: visible;
+  width: auto !important;
 
   > .archives-tree-title {
     background-color: #eee;
