--- a/frontend/app/views/subjects/_linker.html.erb
+++ b/frontend/app/views/subjects/_linker.html.erb
@@ -13,7 +13,6 @@
   data_name = "ref" # De-referenced by the controller if the schema def calls for an item array
 %>
 
-<hr/>
 <div class="control-group">
    <label class="control-label">Subject</label>
    <div class="controls">
@@ -31,7 +30,7 @@
             data-sortable="true"
             data-types='["subject"]'
           />
-          <div class="btn-group">
+          <div class="btn-group pull-right">
              <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
               <ul class="dropdown-menu">
                  <%# <li><a href="javascript:void(0);" class="linker-browse-btn">Browse</a></li> %>
