--- a/frontend/app/views/locations/_linker.html.erb
+++ b/frontend/app/views/locations/_linker.html.erb
@@ -23,7 +23,7 @@
             data-format_template_id="linker_location_template"
             data-types='["location"]'
           />
-          <div class="btn-group">
+          <div class="btn-group pull-right">
              <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <%# <li><a href="javascript:void(0);" class="linker-browse-btn">Browse</a></li> %>
