--- a/frontend/app/views/linked_agents/_show.html.erb
+++ b/frontend/app/views/linked_agents/_show.html.erb
@@ -13,10 +13,11 @@
       <div class="span3 pull1">
         <%= I18n.t("linked_agent.role_#{link["role"]}") %>
       </div>
-      <div class="span8">
-        <div class="token">
-          <%= link["resolved"]["ref"]["names"][0]["sort_name"] %>
-        </div>
+      <div class="span8 token-list">
+        <%= render_token :object => link["resolved"]["ref"], 
+                         :label => link["resolved"]["ref"]["names"][0]["sort_name"], 
+                         :type => link["resolved"]["ref"]["agent_type"], 
+                         :uri => link["resolved"]["ref"]["uri"] %>
       </div>
     </div>
   <% end %>
