--- a/frontend/app/views/subjects/_show.html.erb
+++ b/frontend/app/views/subjects/_show.html.erb
@@ -4,9 +4,10 @@
     <ul class="token-list">
       <% subjects.each do | subject | %>
         <li>
-          <div class="token">
-            <%= Subject.from_hash(subject).display_string %>
-          </div>
+          <%= render_token :object => subject,
+                           :label => Subject.from_hash(subject).display_string,
+                           :type => "subject",
+                           :uri => subject['uri'] %>
         </li>
       <% end %>
     </ul>
