Init popovers on tokens upon add to linker widget; Make all forms use the render_token helper;

--- a/frontend/app/views/collection_management_records/show.html.erb
+++ b/frontend/app/views/collection_management_records/show.html.erb
@@ -87,12 +87,13 @@
           <h3>Record Links</h3>
           <div class="row-fluid label-and-value">
              <div class="span3">Record Links</div>
-             <div class="span9">
-                <% @collection_management.linked_records.each do | ref | %>
-                   <div class="token">
-                      <%= ref["resolved"]["ref"]["title"] %>
-                   </div>
-                <% end %>
+             <div class="span9 token-list">
+               <% @collection_management.linked_records.each do | ref | %>
+                <%= render_token :object => ref["resolved"]["ref"],
+                                  :label => ref["resolved"]["ref"]["title"],
+                                  :type => ref["resolved"]["ref"]["jsonmodel_type"],
+                                  :uri => ref["ref"] %>
+               <% end %>
              </div>
           </div>
 
