--- a/frontend/app/assets/stylesheets/archivesspace/token-input.less
+++ b/frontend/app/assets/stylesheets/archivesspace/token-input.less
@@ -244,7 +244,7 @@ div.token-input-dropdown ul li.token-input-selected-dropdown-item {
   .digital_object .icon-token {background-position: -384px -120px;}
   .digital_object_component .icon-token {background-position: -456px -24px;}
   .accession .icon-token {background-position: -168px -24px;}
-  .subject .icon-token {display: none;}
+  .subject .icon-token {background-position: 0 -48px;}
   .location .icon-token {background-position: -24px -72px;}
 }
 
